@@ -1,3 +1,6 @@
+- iotest and socktest need to read to exhaustion.
+- iotest and socktest need to print an error if write data was discarded.
+- Make all io_select routines take an io_poller instead of an io_select_poller
 - Add an io-config much like mutest-config
 - I don't like the macros to convert io_del into io_select_del.  Anything better we can do?
 - need to try to regain type safety in multi.c:io_init.  get rid of all those void*!
